# Tutorial_GDB_GPIO_InfiniteLedToggling

./: .gitignore  CMakeLists.txt  GITHUB_ACTIONS.md  README.md  RENODE_GUIDE.md  TUTORIAL.md  TUTORIAL.md.backup  build.sh  debug.sh  flash.sh  gdbinit  install_renode.sh  openocd.cfg  renode_debug.gdb  stm32f411_simple.repl  test_ci_config.sh  validate_renode.sh
.github/workflows/: validate.yml
Inc/: main.h
Src/: main.c  stm32f4xx_it.c
